argoCD/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polybot-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: majd.app.fursa.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: polybot-service
            port:
              number: 8443   # match the port your app listens on inside the pod
